@@ -4008,6 +4008,52 @@ HX_timespec_sub
 \series bold
 struct
 \series default
+ timespec 
+\series bold
+*
+\series default
+HX_timespec_mul(
+\series bold
+struct
+\series default
+ timespec 
+\series bold
+*
+\series default
+delta,
+\begin_inset Newline newline
+\end_inset
+
+    
+\series bold
+const struct
+\series default
+ timespec 
+\series bold
+*
+\series default
+p, 
+\series bold
+int
+\series default
+ f);
+\begin_inset Index idx
+status open
+
+\begin_layout Plain Layout
+HX_timespec_mul
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout LyX-Code
+
+\series bold
+struct
+\series default
  timeval 
 \series bold
 *
@@ -4169,6 +4215,22 @@ HX_timespec_sub
 struct timespec
 \family default
  (nanosecond granularity).
+\end_layout
+
+\begin_layout Description
+
+\family typewriter
+HX_timespec_mul
+\family default
+ Multiplies the time quantum in 
+\family typewriter
+p
+\family default
+ by 
+\family typewriter
+f
+\family default
+.
 \end_layout
 
 \begin_layout Description
