@@ -13,6 +13,7 @@ Enhancements:
   * time: add the HX_timespec_isneg function
   * time: add the HX_timespec_neg function
   * time: add the HX_timespec_add function
+  * time: add the HX_timespec_mul function
 Changes:
 - io: remove HX_REALPATH_SYMLINK
 - time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
